--- a/index.html
+++ b/index.html
@@ -745,9 +745,16 @@
             <span class="sitename" style="color: #58b036;">Contato</span>
           </a>
           <div class="footer-contact pt-3">
+            <p style="font-weight: bold; color:#fdc403">SESI CE 207</p>
             <p>Av. Monsenhor Theodomiro Lobo, 100</p>
             <p>Parque Res. Maria Elmira, Caçapava 12285-050</p>
             <p class="mt-3"><strong>Telefone:</strong> <span>+55 (12) 3653-1943</span></p>
+          </div>
+          <div class="footer-contact pt-3">
+            <p style="font-weight: bold; color:#fdc403">SENAI Félix Guisard</p>
+            <p>Av. Independência, 846</p>
+            <p>Independência, Taubaté 12031-001</p>
+            <p class="mt-3"><strong>Telefone:</strong> <span>+55 (12) 3609-5701</span></p>
           </div>
         </div>
 
