--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="container-fluid container-xl position-relative d-flex align-items-center">
 
       <a href="index.html" class="logo d-flex align-items-center me-auto">
-        <img src="assets/img/LOGO2.png" alt="Logo GreenWave" style="width: 210px; height: auto;">
+        <img src="assets\img\logo4.png" alt="Logo GreenWave" style="width: 210px; height: auto;">
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -775,7 +775,7 @@
             <a href="https://www.instagram.com/sesisp.sjc/"><i class="bi bi-youtube"></i></a>
             <a href="https://www.facebook.com/sesisp.sjc/"><i class="bi bi-facebook"></i></a>
             <a href="https://www.instagram.com/sesisp.sjc/"><i class="bi bi-instagram"></i></a>
-            <a href="https://www.linkedin.com/school/senaisp/posts/?feedView=all"><i class="bi bi-linkedin"></i></a>
+            <a href="https://www.linkedin.com/company/senai-nacional/?originalSubdomain=br"><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
 
