--- a/index.html
+++ b/index.html
@@ -476,7 +476,8 @@
         <div class="row">
 
           <div class="col-lg-6 d-flex align-items-center">
-            <img src="assets\img\Data report-bro.png" class="img-fluid" alt="Análise Estatística" style="margin-top: -10%;">
+            <img src="assets\img\Data report-bro.png" class="img-fluid" alt="Análise Estatística"
+              style="margin-top: -10%;">
           </div>
 
           <div class="col-lg-6 pt-4 pt-lg-0 content">
@@ -546,7 +547,7 @@
               mais sustentável.</p>
           </div>
           <div class="col-xl-3 cta-btn-container text-center">
-            <a class="cta-btn align-middle" href="https://geysers.com/">Saiba Mais</a>
+            <a class="cta-btn align-middle" href="https://geysers.com/" target="_blank">Saiba Mais</a>
           </div>
         </div>
 
@@ -661,7 +662,8 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Perguntas Frequentes</h2>
-        <p>Tem mais dúvidas sobre energia geotérmica? Estamos aqui para ajudar a responder suas perguntas <br> esclarecer
+        <p>Tem mais dúvidas sobre energia geotérmica? Estamos aqui para ajudar a responder suas perguntas <br>
+          esclarecer
           como essa fonte sustentável pode transformar o futuro.</p>
       </div><!-- End Section Title -->
 
@@ -775,7 +777,8 @@
             <a href="https://www.instagram.com/sesisp.sjc/"><i class="bi bi-youtube"></i></a>
             <a href="https://www.facebook.com/sesisp.sjc/"><i class="bi bi-facebook"></i></a>
             <a href="https://www.instagram.com/sesisp.sjc/"><i class="bi bi-instagram"></i></a>
-            <a href="https://www.linkedin.com/company/senai-nacional/?originalSubdomain=br"><i class="bi bi-linkedin"></i></a>
+            <a href="https://www.linkedin.com/company/senai-nacional/?originalSubdomain=br"><i
+                class="bi bi-linkedin"></i></a>
           </div>
         </div>
 
